@@ -8,6 +8,8 @@ Version 1.3.6+svn:
       different languages.
     * Show the (possibly bogus) gold per village and fog settings of games with
       "Use map settings" on in a darker font. (patch #771 by uso)
+    * The random starting time of day setting is will now be remembered if 
+      "Use map settings" is used.
 
   * User interface
     * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
