@@ -13,6 +13,8 @@ Version 1.3.6+svn:
      The change is incompatible with older trunk versions fixes (bug #9472).
    * Show the (possibly bogus) GPV and fog settings of games with "Use map
      settings" on in a darker font. (patch #771 by uso)
+   * the random start ToD option is now properly saved and loaded when use map
+     default is used (bug #9532)
  * user interface:
    * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
    * Add an additional line below the minimap in the "Multiplayer->Create game"
